corrección imágenes posts

--- a/portfolio/work2/index.html
+++ b/portfolio/work2/index.html
@@ -101,7 +101,7 @@
          <h1>Plano de ondulación</h1>
          <p>Propuesta abstracta número 1 de un plano bidimensional proyectado con luz por un volúmen ligero y sinuoso.</p>
 <h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/_MG_8408.jpg" alt="This is me"></p>
+<p><img src="/img/planoluz2.jpg" alt="This is me"></p>
 <h6 id="dibujos">Dibujos</h6>
 <blockquote>
 <p><img src="/img/1a.png" alt="This is me">
