--- a/portfolio/work3/index.html
+++ b/portfolio/work3/index.html
@@ -101,7 +101,7 @@
          <h1>Sinuosidad Ligera</h1>
          <p>Propuesta abstracta número 2 de un plano bidimensional proyectado con luz por un volúmen ligero y sinuoso.</p>
 <h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/_MG_8404.jpg" alt="This is me"></p>
+<p><img src="/img/planoluz1.jpg" alt="This is me"></p>
 <h6 id="dibujos">Dibujos</h6>
 <blockquote>
 <p><img src="/img/5a.png" alt="This is me">
