--- a/portfolio/work4/index.html
+++ b/portfolio/work4/index.html
@@ -101,7 +101,7 @@
          <h1>Bordes de difusión</h1>
          <p>Propuesta abstracta número 3 de un plano bidimensional proyectado con luz por distintas capas distribuídas jerárquicamente para generar texturas.</p>
 <h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/_MG_8433.jpg" alt="This is me"></p>
+<p><img src="/img/planoluz3.jpg" alt="This is me"></p>
 <h6 id="dibujos">Dibujos</h6>
 <blockquote>
 <p><img src="/img/2a.png" alt="dibujo1"></p>
