--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -101,10 +101,10 @@
          <h1>Crisálida</h1>
          <p>Volumen de luz que genera texturas e intensidades distintas.</p>
 <h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/_MG_8449.jpg" alt="Crys1"></p>
-<p><img src="/img/_MG_8448.jpg" alt="Crys1"></p>
-<p><img src="/img/_MG_8455.jpg" alt="Crys1"></p>
-<p><img src="/img/_MG_8440.jpg" alt="Crys1"></p>
+<p><img src="/img/chrys1.jpg" alt="Crys1"></p>
+<p><img src="/img/chrys2.jpg" alt="Crys1"></p>
+<p><img src="/img/chrys3.jpg" alt="Crys1"></p>
+<p><img src="/img/chrys4.jpg" alt="Crys1"></p>
          
       </div>
     </div>
