modificación entrega 30 marzo

--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Crisálida</title>
+<title>Prismas</title>
 <meta name="description" content="Este es mi portafolio digital en el cual encontrarás trabajos de diversas áreas en el diseño.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -98,13 +98,16 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Crisálida</h1>
-         <p>Volumen de luz que genera texturas e intensidades distintas.</p>
-<h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/chrys1.jpg" alt="Crys1"></p>
-<p><img src="/img/chrys2.jpg" alt="Crys1"></p>
-<p><img src="/img/chrys3.jpg" alt="Crys1"></p>
-<p><img src="/img/chrys4.jpg" alt="Crys1"></p>
+         <h1>Prismas</h1>
+         <p>Volumen de luz que genera texturas y prismas superpuestos</p>
+<h6 id="fotografías">Fotografías</h6>
+<p><img src="/img/collage1.jpg" alt="Crys3"></p>
+<ul>
+<li>Textura graneada / ruido.</li>
+<li>Opacidad de prismas superpuestos.</li>
+</ul>
+<p><img src="/img/collage3.jpg" alt="Crys3"></p>
+<p><img src="/img/collage2.jpg" alt="Crys2"></p>
          
       </div>
     </div>
