Actualización gráfica y esquemas
4 abril, cambios de fotografía y composición de grillas, dibujos nuevos con puntillismo, detalles de información.

--- a/contact/index.html
+++ b/contact/index.html
@@ -104,10 +104,9 @@
          <p><strong>Ignacio Saavedra Almarza</strong></p>
 <p>Diseño, Serigrafía e Ilustración.</p>
 <p>Santiago - Curacaví / Chile.</p>
-<p>Si te interesa mi trabajo y crees que calza con tu idea, puedes contactarme a:</p>
-<p><a href="mailto:ignacio.sa.96@gmail.com">ignacio.sa.96@gmail.com</a></p>
+<p>Si te interesa mi trabajo y crees que calza con tu idea, contáctame!</p>
 
-         <h4>You can find me also on:</h4>
+         <h4>Mis redes sociales</h4>
          <p class="social social--big">
   
   
@@ -130,7 +129,7 @@
 </p>
 
          
-         <h4>Drop me a line, maybe?</h4>
+         <h4>Envíame un mensaje</h4>
          <form id="contact-form" class="contact-form form" method="post" action="https://formspree.io/you@yoursite.com">
            <div class="controls">
              <div class="form-group">
