--- a/portfolio/work2/index.html
+++ b/portfolio/work2/index.html
@@ -101,13 +101,9 @@
          <h1>Plano de ondulación</h1>
          <p>Propuesta abstracta número 1 de un plano bidimensional proyectado con luz por un volúmen ligero y sinuoso.</p>
 <h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/planoluz2.jpg" alt="This is me"></p>
+<p><img src="/img/inic2.jpg" alt="This is me"></p>
 <h6 id="dibujos">Dibujos</h6>
-<blockquote>
-<p><img src="/img/1a.png" alt="This is me">
-<img src="/img/3a.png" alt="Foto1">
-<img src="/img/4a.png" alt="Foto1"></p>
-</blockquote>
+<p><img src="/img/dibuspost2.jpg" alt="This is me"></p>
 <h6 id="observaciones">Observaciones</h6>
 <ul>
 <li>Sinuosidad en degradados.</li>
@@ -116,7 +112,7 @@
 <li>Multidirección.</li>
 </ul>
 <h6 id="esquema-de-proyección">Esquema de proyección</h6>
-<p><img src="/img/1dibujo.jpg" alt="This is me"></p>
+<p><img src="/img/esqlumin2.jpg" alt="Esquema luz"></p>
          
       </div>
     </div>
