--- a/portfolio/work3/index.html
+++ b/portfolio/work3/index.html
@@ -101,13 +101,9 @@
          <h1>Sinuosidad Ligera</h1>
          <p>Propuesta abstracta número 2 de un plano bidimensional proyectado con luz por un volúmen ligero y sinuoso.</p>
 <h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/planoluz1.jpg" alt="This is me"></p>
+<p><img src="/img/inic1.jpg" alt="This is me"></p>
 <h6 id="dibujos">Dibujos</h6>
-<blockquote>
-<p><img src="/img/5a.png" alt="This is me">
-<img src="/img/1b.png" alt="This is me">
-<img src="/img/2b.png" alt="This is me"></p>
-</blockquote>
+<p><img src="/img/dibuspost1.jpg" alt="This is me"></p>
 <h6 id="observaciones">Observaciones</h6>
 <ul>
 <li>Tridimensionalidad.</li>
@@ -117,6 +113,8 @@
 <li>La luz apuntando lateralmente, genera opacidad en un papel diamante.</li>
 <li>Degradado lateral</li>
 </ul>
+<h6 id="esquema-de-proyección">Esquema de proyección</h6>
+<p><img src="/img/esqlumin2.jpg" alt="Esquema luz"></p>
          
       </div>
     </div>
