--- a/portfolio/work4/index.html
+++ b/portfolio/work4/index.html
@@ -101,11 +101,11 @@
          <h1>Bordes de difusión</h1>
          <p>Propuesta abstracta número 3 de un plano bidimensional proyectado con luz por distintas capas distribuídas jerárquicamente para generar texturas.</p>
 <h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/planoluz3.jpg" alt="This is me"></p>
+<p><img src="/img/inic3.jpg" alt="This is me"></p>
 <h6 id="dibujos">Dibujos</h6>
-<blockquote>
-<p><img src="/img/2a.png" alt="dibujo1"></p>
-</blockquote>
+<p><img src="/img/dibuspost3.jpg" alt="dibujo1"></p>
+<h6 id="esquema-de-proyección">Esquema de proyección</h6>
+<p><img src="/img/esqlumin2.jpg" alt="Esquema luz"></p>
 <h6 id="observaciones">Observaciones</h6>
 <ul>
 <li>Borde que separa formas pero al mismo tiempo se observa como un todo.</li>
