--- a/portfolio/work5/index.html
+++ b/portfolio/work5/index.html
@@ -101,13 +101,14 @@
          <h1>Prismas</h1>
          <p>Volumen de luz que genera texturas y prismas superpuestos</p>
 <h6 id="fotografías">Fotografías</h6>
-<p><img src="/img/collage1.jpg" alt="Crys3"></p>
+<p><img src="/img/prismas1.jpg" alt="Crys3"></p>
 <ul>
 <li>Textura graneada / ruido.</li>
 <li>Opacidad de prismas superpuestos.</li>
 </ul>
-<p><img src="/img/collage3.jpg" alt="Crys3"></p>
-<p><img src="/img/collage2.jpg" alt="Crys2"></p>
+<p><img src="/img/tramas1.jpg" alt="tramas"></p>
+<p><img src="/img/tramas2.jpg" alt="tramas"></p>
+<p><img src="/img/prismas2.jpg" alt="prismas"></p>
          
       </div>
     </div>
