--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.pink.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -107,7 +107,7 @@ Realicé mi práctica profesional en una empresa de eficiencia energética en la
 <p>Además de diseño, dedico parte de mi tiempo a la <strong>ilustración</strong> y también hago estampados a mano con la técnica de <strong>serigrafía</strong>.
 También realicé un estudio intensivo que me capacitó para ser <strong>actor de doblaje y locución</strong>.</p>
 </blockquote>
-<p><img src="/img/saign.jpg" alt="thisisme"></p>
+<p><img src="/img/saignprofile.jpg" alt="thisisme"></p>
 <h4 id="educación">Educación</h4>
 <ul>
 <li>Universidad de Valparaíso - 1er año de Diseño [2015].</li>
