--- a/portfolio/work6/index.html
+++ b/portfolio/work6/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="/css/owl.theme.css">
 
 
-  <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <link href="/css/style.pink.css" rel="stylesheet" id="theme-stylesheet">
 
  
 
@@ -107,7 +107,7 @@
 <blockquote>
 <ul>
 <li>Este vehículo toma el concepto de libertad en el ámbito de usuario y movilidad. Está diseñado para ser conducido por adultos y menores de edad independientemente de una licencia. Tiene un tamaño reducido para la optimización de espacios en la urbe, recarga eléctrica y un sistema digital que puede ser monitoreado en base al smartphone como núcleo. Además posee un sistema de ruido artificial para la seguridad en la circulación peatonal.</li>
-<li>La contribución de este vehículo tiene potencial en el espacio que ocupan los automóviles convencionales y en el medio ambiente, porque se reemplaza un sistema tradicional que emite gases, con uno eléctrico que reduce la contaminación acustica y de aires. Reducir la emisión de gases es clave para poder circular con tranquilidad y evitar enfermedades en la ciudad, este problema es causado en gran parte por los automóviles convencionales.</li>
+<li>La contribución de este vehículo tiene potencial en el espacio que ocupan los automóviles convencionales y en el medio ambiente, porque se reemplaza un sistema tradicional que emite gases, con uno eléctrico que reduce la contaminación acustica y de aires. <strong>¿Reducir la emisión de gases es clave para poder circular con tranquilidad? ¿Cómo deberían construirse los vehículos del futuro? ¿Qué sistemas deberían re definirse?</strong> Las futuras tecnologías podrían ser clave para evitar enfermedades en la ciudad, ya que, este problema es causado en gran parte por los automóviles convencionales. Es relevante re diseñar los sistemas que causan problemas, mejorando sus falencias y colocándose en perspectivas posibles en un futuro.</li>
 </ul>
 </blockquote>
 <p><img src="/img/evas.jpg" alt="banner"></p>
@@ -115,6 +115,7 @@
 <h1 id="img-srcimgevasjpghttpsyoutubenoltevx_emo"><a href="https://youtu.be/nolTeVx_Emo"><!-- raw HTML omitted --></a></h1>
 <blockquote>
 <ul>
+<li><strong>¿La humanidad debiera tener pensado nuevos equipamientos para futuros posibles? ¿Existe sincronía entre máquina y cuerpo orgánico actualmente?</strong></li>
 <li>Estos trajes robóticos son de la serie Evangelion. Nos muestran un futuro en que los seres humanos deben pilotear estos mechas y para poder controlarlos a la perfección deben estar sincronizados 100% entre máquina, cuerpo y mente.</li>
 <li>El Eva es tan preciso que incluso debe simular dolor para que el piloto no sobrepase sus límites humanos y corra el riesgo de morir. Sin embargo, el robot potencia las capacidades físicas como correr, saltar y golpear.</li>
 <li>El Eva está equipado con armas y escudos protectores. Una característica importante para sobrevivir en un futuro apocalíptico para que el humano pueda circular con seguridad en un contexto de constante peligro.</li>
@@ -127,6 +128,8 @@
 <ul>
 <li>Las reuniones holográficas podrían ser la potencial herramienta para reunirse con las personas de manera digital, simulando de la forma más precisa posible y &ldquo;real&rdquo; una instancia de presencia física.</li>
 <li>En la saga Starwars vemos a menudo esta tecnología en las reuniones que tiene el consejo Jedi, las llamadas, los mensajes como el del video adjunto, etc. Incluso se pueden ver tableros de juego con esta tecnología. Es un concepto bastante interesante para un contexto como la pandemia actual en la cual debemos quedarnos en nuestras casas pero mantener un constante contacto con la gente por medio de lo virtual.</li>
+<li><strong>¿Qué es lo que hace que una reunión se sienta como reunión?</strong>
+El espacio es fundamental para sentirse en una sala de reunión. El encontrarse rodeado por &ldquo;cuerpos&rdquo;, dirigir miradas y generar confianza con la persona que tienes al lado transforma un espacio virtual en una realidad simulada, ya que existe interacción más allá de mirar una pantalla y utilizar el micrófono. Al entrar en una realidad virtual, se da lugar para desenvolver conductas que se manifiestan a través del cuerpo y los gestos.</li>
 </ul>
 </blockquote>
 <p><img src="/img/equipotridimensional.jpg" alt="banner"></p>
@@ -136,7 +139,7 @@
 <ul>
 <li>Este equipo es un wearable/extensión del cuerpo humano para moverse a grandes velocidades con agilidad y destreza entre pilares, edificios, árboles y titanes. Es de una serie de animación japonesa llamada Shingeki no Kyojin.
 Lo interesante de este objeto, es que los japoneses siempre logran ponerse en la perspectiva menos esperada con sus ideas. Dichas son plasmadas en el anime, y a pesar de ser elementos ficticios, no dejan de ser conceptos de adaptación móvil en un entorno apocalíptico, en donde la tierra presenta ciertas condiciones que impiden al ser humano moverse en el piso.</li>
-<li>El equipo de maniobras 3D supera los límites de velocidad y posicionamiento que tiene el cuerpo humano, otorgándole adhesión a superficies rígidas, grandes alturas, espacios anchos y estrechos. Todo con accesorios como cuerda de acero, ganchos, gatillos y estanques de gas que impulsan los saltos. Ahora bien ¿Qué tiene que ver esto con la pandemia? Sin duda, es algo que parece ajeno a simple vista, pero esta serie muestra inventos nuevos que desarrolla la humanidad para anteponerse a futuros problemas, en un contexto distinto al real, pero no tan distante, ya que deben vivir tras unos muros que limitan su libertad. El COVID-19 ahora mismo es ese muro, por esa razón creo que la creatividad japonesa es un buen referente para tomar elementos existentes y re-configurarlos a nuestros problemas.</li>
+<li>El equipo de maniobras 3D supera los límites de velocidad y posicionamiento que tiene el cuerpo humano, otorgándole adhesión a superficies rígidas, grandes alturas, espacios anchos y estrechos. Todo con accesorios como cuerda de acero, ganchos, gatillos y estanques de gas que impulsan los saltos. Ahora bien <strong>¿Qué tiene que ver esto con la pandemia? ¿Cómo se puede aportar desde una idea conceptual y ficticia?</strong> Sin duda, es algo que parece ajeno a simple vista, pero esta serie muestra inventos nuevos que desarrolla la humanidad para anteponerse a futuros problemas, en un contexto distinto al real, pero no tan distante, ya que deben vivir tras unos muros que limitan su libertad. El COVID-19 ahora mismo es ese muro, por esa razón creo que la creatividad japonesa es un buen referente para tomar elementos existentes y re-configurarlos a nuestros problemas.</li>
 </ul>
 </blockquote>
 <p><img src="/img/metromask.jpg" alt="banner"></p>
@@ -144,6 +147,7 @@ Lo interesante de este objeto, es que los japoneses siempre logran ponerse en la
 <h1 id="img-srcimgmetromaskjpghttpswwwyoutubecomwatchv4w6n8csfcvat57s"><a href="https://www.youtube.com/watch?v=4w6N8cSFCvA&amp;t=57s"><!-- raw HTML omitted --></a></h1>
 <blockquote>
 <ul>
+<li><strong>¿Con qué equipamiento debería movilizarse la humanidad de ahora en adelante? ¿Cuáles son los objetos clave en un entorno perjudicial para la salud? ¿Deberían re configurarse los espacios para circular sin una máscara? ¿Podemos realmente vivir sin salir de nuestras casas para siempre y trabajar desde las dichas?</strong></li>
 <li>Este wearable/extensión pertenece a un videojuego post apocalíptico llamado Metro. Lo escogí por el concepto que representa; un accesorio que lleva toda/o ciudadana/o en su equipamiento porque existen áreas en las que no se puede respirar debido a gases tóxicos que permanecen en el ambiente y son letales para el sistema respiratorio.</li>
 <li>La máscara de oxígeno de Metro funciona con cápsulas de oxígeno y filtros que permiten respirar en un determinado tiempo, sin exponerse a las zonas de gases tóxicos. Basta con tener las suficientes para un viaje, rotarlas en la boquilla y activar el oxígeno. Además, este objeto cuenta con un reloj temporizador que te avisa cuando el oxígeno se está acabando para que prepares la recarga.</li>
 <li>Tomé este concepto porque combina dispositivos digitales de información con elementos físicos, que permiten mejorar la experiencia en el ser humano para movilizarse en áreas de alto riesgo por condiciones infecciosas.</li>
