--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Sinuosidad Ligera</title>
+<title>Fusion 360</title>
 <meta name="description" content="Este es mi portafolio digital en el cual encontrarás trabajos de diversas áreas en el diseño.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -98,23 +98,14 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Sinuosidad Ligera</h1>
-         <p>Propuesta abstracta número 2 de un plano bidimensional proyectado con luz por un volúmen ligero y sinuoso.</p>
-<h6 id="fotografía">Fotografía</h6>
-<p><img src="/img/inic1.jpg" alt="This is me"></p>
-<h6 id="dibujos">Dibujos</h6>
-<p><img src="/img/dibuspost1.jpg" alt="This is me"></p>
-<h6 id="observaciones">Observaciones</h6>
+         <h1>Fusion 360</h1>
+         <p>Post en proceso</p>
+<h6 id="lista-de-softwares">Lista de softwares</h6>
+<blockquote>
 <ul>
-<li>Tridimensionalidad.</li>
-<li>Orgánico.</li>
-<li>Ruido/film.</li>
-<li>Textura a partir de degradados de diversos valores.</li>
-<li>La luz apuntando lateralmente, genera opacidad en un papel diamante.</li>
-<li>Degradado lateral</li>
+<li>en construcción</li>
 </ul>
-<h6 id="esquema-de-proyección">Esquema de proyección</h6>
-<p><img src="/img/esqlumin2.jpg" alt="Esquema luz"></p>
+</blockquote>
          
       </div>
     </div>
