Actualización post fusion360 y software

--- a/portfolio/work7/index.html
+++ b/portfolio/work7/index.html
@@ -106,31 +106,39 @@
 <h1 id="img-srcimgprocreatejpghttpsprocreateart"><a href="https://procreate.art/"><!-- raw HTML omitted --></a></h1>
 <blockquote>
 <ul>
-<li>en construcción</li>
+<li>Esta aplicación es exclusiva de apple y está diseñada como una herramienta del ipad + el Apple Pencil. Lo que más destaco es la comodidad de portar el dispositivo con la aplicación como si fuera una croquera en la que puedes dibujar en cualquier momento y en cualquier lugar. Los atajos gestuales son muy útiles y dinámicos para dibujar de la mejor manera para técnicas análogas y digitales.</li>
+<li>Procreate está pensado para artistas, ilustradores y diseñadores. Se le puede aprovechar en su mayor potencial con la precisión que otorga el Apple Pencil, un dispositivo extra que entrega una experiencia más real y parecida al dibujo tradicional.</li>
 </ul>
 </blockquote>
+<p>&mdash;[Video en proceso de edición]&mdash;</p>
 <p><img src="/img/sai.jpg" alt="banner"></p>
 <p><a href="http://www.mediafire.com/file/8v3b8115orc33m3/Paint_Tool_SAI_%2528bgm94%2529.rar/file">Paint Tool Sai</a> - Dibujo digital y análogo.</p>
 <h1 id="img-srcimgsaijpghttpwwwmediafirecomfile8v3b8115orc33m3paint_tool_sai_2528bgm942529rarfile"><a href="http://www.mediafire.com/file/8v3b8115orc33m3/Paint_Tool_SAI_%2528bgm94%2529.rar/file"><!-- raw HTML omitted --></a></h1>
 <blockquote>
 <ul>
-<li>en construcción</li>
+<li>Este software también es una herramienta para dibujar en tu PC. Es un programa gratuito utilizado por ilustradores japoneses para desarrollo del arte manga. La mejor característica del &ldquo;Sai&rdquo; es que tiene una interfaz bastante básica y fácil de aprender. Además pesa muy poco.</li>
+<li>Es un software totalmente portable en el cual puedes lograr trabajos tan buenos como en photoshop (en cuanto a dibujo y calidad de pinceles).
+El potencial del Sai se puede aprovechar de mejor manera con una tableta gráfica. Yo recomiendo utilizar una Wacom u otra que se asemeje a la precisión que tiene en el lápiz.</li>
 </ul>
 </blockquote>
+<p>&mdash;[Video en proceso de edición]&mdash;</p>
 <p><img src="/img/zbrush.jpg" alt="banner"></p>
 <p><a href="https://www.zbrushcentral.com/">Zbrush</a> - Modelación 3D de personajes.</p>
 <h1 id="img-srcimgzbrushjpghttpswwwzbrushcentralcom"><a href="https://www.zbrushcentral.com/"><!-- raw HTML omitted --></a></h1>
 <blockquote>
 <ul>
-<li>en construcción</li>
+<li>Lo genial de Zbrush radica en la modelación 3D con un estilo &ldquo;escultor&rdquo;. Puedes literalmente esculpir modelos 3D con herramientas intuitivas que te entrega el programa. Si manejas programas de modelado 3D, te será fácil aprender este software, si no conoces mucho este mundo, puedes aprender las herramientas con tutoriales o probándolas paso a paso.</li>
+<li>Zbrush es una buena herramienta para modelar personajes o cuerpos orgánicos, ese es su fuerte.</li>
 </ul>
 </blockquote>
+<p>&mdash;[Video en proceso de edición]&mdash;</p>
 <p><img src="/img/videoleap.jpg" alt="banner"></p>
 <p><a href="http://videoleapapp.com/">Enlight Videoleap</a> - Edición de video portable.</p>
 <h1 id="img-srcimgvideoleapjpghttpvideoleapappcom"><a href="http://videoleapapp.com/"><!-- raw HTML omitted --></a></h1>
 <blockquote>
 <ul>
-<li>en construcción</li>
+<li>Esta aplicación es exluciva de Apple y funciona bastante bien en el ipad y iphone. Es de las mejores que he probado en dispositivos porque tiene las herramientas necesarias que requiere un software de video portable. Si necesitas editar un video con cosas básicas como velocidad, transiciones y calidad de render en un tiempo límite en cualquier lugar, Videoleap es el software indicado.</li>
+<li>Lo que más me gusta de Videoleap es la interfaz simple que tiene. No tardarás en aprenderte todas las herramientas.</li>
 </ul>
 </blockquote>
          
