--- a/portfolio/work8/index.html
+++ b/portfolio/work8/index.html
@@ -99,13 +99,24 @@
     <div class="col-lg-8">
       <div class="content-column-content">
          <h1>Fusion 360</h1>
-         <p>Post en proceso</p>
-<h6 id="lista-de-softwares">Lista de softwares</h6>
-<blockquote>
-<ul>
-<li>en construcción</li>
-</ul>
-</blockquote>
+         <p>En esta publicación veremos un pequeño ejercicio de modelación 3D básica en el software de Autodesk, mis primeros pasos editando una superficie en base a un brazo.</p>
+<h6 id="primeros-pasos-con-autodesk-fusion-360">Primeros pasos con Autodesk Fusion 360</h6>
+<p>Debido a que en la grabación sólo se ve el proceso de modelado, sin los parámetros y opciones, dejaré una serie de screenshots que muestran las configuraciones que utilicé.</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/P9AGNIV7nno" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+<p><img src="/img/hand1.jpg" alt="paso1"></p>
+<p><img src="/img/hand2.jpg" alt="paso2"></p>
+<p><img src="/img/hand3.jpg" alt="paso3"></p>
+<p><img src="/img/hand4.jpg" alt="paso4"></p>
+<p><img src="/img/hand5.jpg" alt="paso5"></p>
+<p><img src="/img/hand6.jpg" alt="paso6"></p>
+<p><img src="/img/hand7.jpg" alt="paso7"></p>
+<p><img src="/img/hand8.jpg" alt="paso8"></p>
+<p><img src="/img/hand9.jpg" alt="paso9"></p>
+<p><img src="/img/hand10.jpg" alt="paso10"></p>
          
       </div>
     </div>
