--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -236,7 +236,7 @@
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  <p>Post en proceso</p>
+                                  <p>En esta publicación veremos un pequeño ejercicio de modelación 3D básica en el software de Autodesk, mis primeros pasos editando una superficie en base a un brazo.</p>
                                 
                             </p>
                           </div>
