--- a/portfolio/work10/index.html
+++ b/portfolio/work10/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Investigación Covid-19</title>
+<title>Investigación Covid-19 pt2</title>
 <meta name="description" content="Este es mi portafolio digital en el cual encontrarás trabajos de diversas áreas en el diseño.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -98,17 +98,14 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Investigación Covid-19</h1>
-         <p>Diseño de Wearables para sobrevivir en escenarios perjudiciales para la salud.</p>
-<p>Junto a <a href="https://saign.github.io/portfolio/">Ignacio Saavedra</a> buscamos desarrollar posibles wearables para sobrellevar o subsistir con el COVID, un proyecto futuro que se encargue de solucionar la movilidad en el contexto de pandemia y para rediseñar y cuestionarnos cómo van a funcionar los objetos de ahora en adelante. El tema de movilidad abre diversas aristas que nos obligan a replantear ciertas costumbres en nuestra rutina diaria.</p>
+         <h1>Investigación Covid-19 pt2</h1>
+         <p>Diseño de Wearables que enfrentan al Covid-19 - Segunda parte de la investigación y desarrollo de propuestas.</p>
+<p><img src="/img/bannerfuturemask.jpg" alt="bannerintro"></p>
+<p>Continúa la investigación junto a <a href="https://carobustamante.github.io/portfolio/">Carolina Bustamante</a>. En esta ocasión les presentamos una serie de propuestas para enfrentar la pandemia, tanto en el presente, como en un futuro.</p>
 <h5 id="ideas-de-propuesta">Ideas de propuesta</h5>
-<p><strong>Cápsula</strong> &ndash; con humedad relativa y temperatura en la que se encuentre un espacio determinado para erradicar el virus en superficies</p>
-<p><strong>Nano tecnología</strong> &ndash; que ataque la genética del virus ralentizando el tiempo de multiplicación de este como el proyecto para atacar cáncer con este sistema, aplicando calor o medicamentos adecuados al elemento a eliminar.</p>
-<p><strong>Spray</strong> &ndash; con tinte que ayude a detectar COVID en superficies (que tome un color determinado en presencia de este)</p>
 <p><strong>Bomba sanitizadora</strong></p>
-<p><img src="/img/bombasanitizadora.png" alt="ideacaro"></p>
-<p>En vez de humo que tenga elementos químicos que neutralice el virus haciendo más fácil su aniquilación en zonas más complejas o de difícil acceso.</p>
-<p><strong>Filtro natural/biomaterial</strong> &ndash; para mascarillas, tal vez aprovechando métodos de la naturaleza (animales, plantas, insectos, etc)</p>
+<p><img src="/img/bombasanitizadora.png" alt="bomba"></p>
+<p>Tal como una bomba de humo está pensada para funcionar en zonas especificas infectadas. En este caso con un químico que neutralice el COVID, dejando la zona limpia del virus. Este puede ser arrojado en zonas de alto contagio y de difícil acceso, para que el personal médico no corra el riesgo de ser contagiado y pueda seguir su camino.</p>
 <p><strong>Sistema sanitizador de objetos</strong></p>
 <p><img src="/img/sistemasani.png" alt="ideayo"></p>
 <p>Esta es una propuesta de diseño para el corto plazo. El contexto es la obra de construcción.
@@ -125,6 +122,22 @@ Los lentes de protección son parte de la máscara. Necesitamos equipamientos lo
 <p>Los potenciales usuarios podrían ser, en un corto plazo, médicos cuya labor esté basada en la asistencia residencial. Esto disminuiría drásticamente su riesgo sanitario. También personas que requieran movilizarse en zonas infectadas por emergencias o temas laborales, incluyendo profesiones que no han detenido sus jornadas.
 En un mediano y largo plazo (por temas económicos y políticos), todas las personas podrían utilizar su propia máscara para vivir en contextos de pandemia. Utilizar una máscara temporalmente sería algo común y fundamental dentro de los equipamientos para la humanidad.</p>
 <p>Desconocemos qué nos deparará el futuro, es por eso que consideramos importante anticiparnos a los problemas y a re-pensar cómo serán los equipamientos, los dispositivos y las formas de vestirnos y movilizarnos.</p>
+<p><strong>Desarrollo de concepto - Máscara inteligente antibacterial</strong></p>
+<p>Esquema de viaje usuario:
+El concepto de máscara se desarrolla en un crecimiento reactivo del wearable, desde el cuello en la vestimenta. Es decir, a medida que el usuario avanza en una zona, la tecnología detecta mediante sensores de calor el virus y se adapta a la antomía facial de la persona. Se despliega en la medida que aumenta el riesgo de ser contagiada/o.</p>
+<p><img src="/img/visionlentescalor.png" alt="visionlentes"></p>
+<p>El wearable incluye una data sobre el virus, en territorios de la ciudad. Los lentes de la máscara permiten ver, además, las superficies en donde se encuentra el virus y las altas temperaturas en seres vivos, como medida preventiva en virtud de la sensibilidad de la máscara y de la percepción del usuario.</p>
+<p><img src="/img/visioncalor.png" alt="visioncalor"></p>
+<p>Los detalles del objeto como la notificación de batería y proximidad de virus, se implementa mediante un sistema que avisa en el smartphone.</p>
+<p>El siguiente video ilustra cómo funcionaría el wearable:
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/x1yQpk-Rxro" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+</p>
+<p><img src="/img/render1.png" alt="visioncalor"></p>
+<p><img src="/img/render2.png" alt="visioncalor"></p>
+<p><img src="/img/render3.png" alt="visioncalor"></p>
          
       </div>
     </div>
