--- a/portfolio/work9/index.html
+++ b/portfolio/work9/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Investigación Covid-19</title>
+<title>Investigación Covid-19 pt1</title>
 <meta name="description" content="Este es mi portafolio digital en el cual encontrarás trabajos de diversas áreas en el diseño.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -98,7 +98,7 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Investigación Covid-19</h1>
+         <h1>Investigación Covid-19 pt1</h1>
          <p>Diseño de Wearables para sobrevivir en escenarios perjudiciales para la salud.</p>
 <p><img src="/img/bannercovid.jpg" alt="bannercovid"></p>
 <p>Junto a <a href="https://carobustamante.github.io/portfolio/">Carolina Bustamante</a> estamos desarrollando un proceso de investigación respecto al COVID-19. Buscamos referentes actuales que nos brinden la mayor cantidad de información posible para desarrollar un proyecto futuro que se encargue de solucionar la movilidad en el contexto de pandemia y para re-diseñar y cuestionarnos cómo van a funcionar los objetos de ahora en adelante. El tema de movilidad abre diversas aristas que nos obligan a re-plantear ciertas costumbres en nuestra rutina diaria. En esta ocasión se va a abordar el tema desde el uso de los Wearables como equipamiento.</p>
